# Take-Home-Exercise_get-papers-list

./: .gitignore  pyproject.toml
.github/workflows/: publish.yml
get-papers-list-final/: README.md  pyproject.toml
get-papers-list-final/get_papers_list/: api_client.py  filter.py
get_papers_list/: cli.py  exporter.py
tests/: test_core.py
